# instance-selection-for-regression

./: README.md  pyproject.toml  setup.py
SELCON/: datasets.py  linear.py
SELCON/model/: LinearRegression.py  SELCON.py
SELCON/utils/: Create_Slices.py  custom_dataset.py  time_series.py
examples/: examples_noisy_data.ipynb
instance_selection/: __init__.py  _drop.py  _fish.py  _fixed_time_window.py  _full_set.py  _gradient_shapley.py  _local_outlier_factor.py  _mutual_information.py  _params_dict.py  _random_selection.py  _reg_CNN.py  _reg_ENN.py  _selcon.py  base.py
kondo_ml/: __init__.py  kondo_ml.py  utils.py
kondo_ml/instance_selection/: __init__.py  _drop.py  _fish.py  _fixed_time_window.py  _full_set.py  _gradient_shapley.py  _local_outlier_factor.py  _mutual_information.py  _random_selection.py  _reg_CNN.py  _reg_ENN.py  _selcon.py
kondo_ml/instance_selection/SELCON/: datasets.py  linear.py
kondo_ml/instance_selection/SELCON/model/: SELCON.py
kondo_ml/instance_selection/SELCON/utils/: Create_Slices.py  custom_dataset.py  time_series.py
