[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kondo_ml"
version = "0.0.7"
authors = [
  { name="Lukas Rücker", email="ruecker.lukas@gmail.com" },
]
description = "Python package for instance selection algorithms"
readme = "README.md"
dependencies = ['numpy','pandas','scikit-learn','torch']
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lurue101/instance-selection-for-regression"
